kubernetes/esphome/dsmr-servicemonitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsmr-metrics-proxy
  labels:
    app.kubernetes.io/name: dsmr-metrics-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dsmr-metrics-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dsmr-metrics-proxy
    spec:
      containers:
      - name: caddy
        image: caddy:2.10.2-alpine
        args:
        - reverse-proxy
        - --from
        - :8080
        - --to
        - dsmr.cambridge.me:80
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 5m
            memory: 16Mi
          limits:
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dsmr
  labels:
    app.kubernetes.io/name: dsmr
spec:
  selector:
    app.kubernetes.io/name: dsmr-metrics-proxy
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
