kubernetes/esphome/esphome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  labels:
    app: esphome
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      volumes:
      - name: config
        hostPath:
          path: /data/esphome
      - name: platformio
        hostPath:
          path: /data/esphome/.platformio
      - name: builds
        emptyDir:
      - name: temp
        emptyDir:
      containers:
      - name: esphome
        # https://github.com/esphome/esphome/releases
        image: ghcr.io/esphome/esphome:2026.3.2
        securityContext:
          runAsUser: 37746
          runAsGroup: 37746
        volumeMounts:
        - name: config
          mountPath: /config
        - name: platformio
          mountPath: /.platformio
        - name: builds
          mountPath: /config/.esphome
        - name: temp
          mountPath: /.temp
        ports:
        - name: http
          containerPort: 6052
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  selector:
    app: esphome
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "esphome.home.cambridge.me"
    secretName: esphome-home-cambridge-me-tls
  rules:
  - host: esphome.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: esphome
            port:
              name: http
